...
        android:gravity="center_horizontal"
        android:hapticFeedbackEnabled="true"
        android:text="@string/hello_world"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/editTextUserInput"
        android:layout_width="317dp"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/header_margin"
        android:autofillHints=""
        android:background="#7E5E5858"
        android:hint="@string/type_something" />


    <Button
        android:id="@+id/changeTextBt"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/change_text" />

...
